--- a/client/src/App.css
+++ b/client/src/App.css
@@ -93,3 +93,11 @@
   text-transform: uppercase;
   display:inline-block
 }
+
+.area{
+  margin: 0 auto;
+  width: 100%;
+  height: 200px;
+  background: #e5e5e5;
+}
+
