--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,7 +3,7 @@
 }
 /* input  */
 .input-textboxes, buttons {
-  width: 40%;
+  width: 250px;
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
